--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
